force-app/main/default/objects/Out_of_Office_Approval__c/Out_of_Office_Approval__c.object-meta.xml
<CustomObject>
    <label>Out of Office Approval</label>
    <nameField>
        <displayFormat>OF-{0000}</displayFormat>
        <label>Out of Office Approval Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Out of Office Approvals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>