force-app/main/default/objects/Out_of_Office_Approval__c/fields/Out_of_Office_Approval_Needed__c.field-meta.xml
<CustomField>
    <fullName>Out_of_Office_Approval_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Out of Office Approval Needed</label>
    <type>Checkbox</type>
</CustomField>