force-app/main/default/objects/Out_of_Office_Approval__c/fields/PM__c.field-meta.xml
<CustomField>
    <fullName>PM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Out_of_Office_Approvals1</relationshipName>
    <type>Lookup</type>
</CustomField>