force-app/main/default/objects/Out_of_Office_Approval__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Out of Office Approvals</relationshipLabel>
    <relationshipName>Out_of_Office_Approvals</relationshipName>
    <type>Lookup</type>
</CustomField>