force-app/main/default/objects/Out_of_Office_Approval__c/validationRules/Trip_end_date_after_start_date.validationRule-meta.xml
<ValidationRule>
    <fullName>Trip_end_date_after_start_date</fullName>
    <active>false</active>
    <errorConditionFormula>End_Date__c &lt;  Start_Date__c</errorConditionFormula>
    <errorMessage>Permission end date must be greater than or equal to start date</errorMessage>
</ValidationRule>